--- a/Index.html
+++ b/Index.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Link</title>
 </head>
 <body>
-    <H1>นายสิทธิกร แก้วสุข</H1>
-    <H2>อายุ 17 ปี</H2>
-    <H3>เกิดวันที่ 14 กุมภาพันธ์</H3>
-    <H4>ที่อยู่ 26</H4>
-    <H5>สถานที่ศึกษาเดิม โรงเรียนเทศบาลบ้านสุขสำราญ </H5>
-        <hr>
-      <P> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, </p>
-<p><b> Lorem ipsum</b> dolor sit, amet<i> consectetur adipisicing elit.</i> Sapiente magni necessitatibus expedita pariatur quos rerum.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit.<u> Velit ullam cumque</u> facere necessitatibus fugiat minima laborum esse quisquam quia! Repellendus.</p>
+    <h1>การสร้างลิ้งบนเว็บไซต์</h1>
 
-    <img src= https://www.google.com/imgres?imgurl=https%3A%2F%2Fassets.brandinside.asia%2Fuploads%2F2017%2F01%2FYour-Name-Kimi-no-Na-Wa.jpg&tbnid=hfqjnN-J88YLKM&vet=12ahUKEwj-8oX4opCCAxU5bmwGHUlHCwQQMygFegQIARBS..i&imgrefurl=https%3A%2F%2Fbrandinside.asia%2Fyour-name-highest-grossing-anime-film%2F&docid=_HFF8X0BDCrJqM&w=960&h=588&q=your%20name&ved=2ahUKEwj-8oX4opCCAxU5bmwGHUlHCwQQMygFegQIARBS
-     alt="ภาพYour Name" height="500" width="500" >
+    <h3>Tag A</h3>
+
+    <p>คำสั่งในการทำ Hyperlink
+        หลังจากที่เรารู้เกี่ยวกับ โครงสร้าง HTML และการจัดรูปแบบตัวอักษร ในตอนที่ 3 เรามารู้เกี่ยวกับการทำ hypeerlink กัน
+        hyperlink คืออะไร hyperlink พูดอย่างง่ายๆ คือ การทำให้ ข้อความหรือรูปภาพ ของเราสามารถเชื่อมโยงไปยัง เอกสารหรือ File อื่นๆได้</p>
+
+<a href="LinkExample.html">ตัวอย่างการใช้งาน Tag a</a>
+<br>
+<a href="pages/dashboard.html">dashboard</a>
+<br>
+<a href="pages/about.html">about</a>
+
 </body>
 </html>
